Local storage now working. Started styling.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     </div>
 
     <div id="newBookFormDiv"></div>
+
+    <div>
+        <button id="clearLibrary">Clear Library</button>
+    </div>
         
 
     <script src="script.js"></script>
